Rebased with dev, some refactoring
Signed-off-by: Dawid Niezgódka <dawid.niezgodka@gmail.com>